--- a/index.html
+++ b/index.html
@@ -6,16 +6,32 @@
     const root = makeComponent(function root() {
       const wrapper = this.append(
         div({
-          style: { "display": "flex", "flex-direction": "column" },
+          style: { "display": "flex", "flex-direction": "column", "align-items": "flex-start" },
         })
       );
       const state = this.useState({ i: 0 });
       wrapper.append(span(`Hello ${state.i}`));
       wrapper.append(span(`world ${state.i}`));
+      wrapper.append(
+        input({
+          type: "text",
+          value: state.foo,
+          onInput: (event) => {
+            state.foo = event.target.value;
+            state.i += 1;
+            this.rerender();
+          },
+          onChange: () => {
+            state.i += 1;
+            this.rerender();
+          },
+        })
+      );
+      /*
       setTimeout(() => {
         state.i += 1;
         this.rerender();
-      }, 1000);
+      }, 1000);*/
       for (let j = 0; j < state.i; j++) {
         wrapper.append(span(`foo ${j}`, { key: j }));
       }
