--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     const root = makeComponent(function root() {
       const wrapper = this.append(
         div({
-          style: { "display": "flex", "flex-direction": "column", "align-items": "flex-start" },
+          style: { display: "flex", flexDirection: "column", alignItems: "flex-start" },
         })
       );
       const state = this.useState({ i: 0 });
