--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           style: { display: "flex", flexDirection: "column", alignItems: "flex-start" },
         })
       );
-      const state = this.useState({ i: 0, count: null });
+      const state = this.useState({ i: 0, username: "", count: 0 });
       wrapper.append(
         textInput({
           label: "Username",
@@ -31,6 +31,7 @@
             this.rerender();
           },
           min: 0,
+          clearable: false,
         })
       );
       wrapper.append(span(`state: ${JSON.stringify(state)}`));
