--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         wrapper.append(span(`foo ${j}`, { key: j }));
       }
       const iconsWrapper = wrapper.append(
-        typography("", {
+        span("", {
           size: "big",
         })
       );
