--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             state.i += 1;
             this.rerender();
           },
+          autoFocus: true,
         })
       );
       wrapper.append(
