--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="jsgui.css" />
   <script>
     const root = makeComponent(function root() {
-      const state = this.useState({ i: 0, username: "", count: 0 });
+      const state = this.useState({ username: "", count: 0 });
       const wrapper = this.append(
         div({
           style: { display: "flex", flexDirection: "column", alignItems: "flex-start" },
@@ -18,7 +18,6 @@
           value: state.username,
           onInput: (newUsername) => {
             state.username = newUsername;
-            state.i += 1;
             this.rerender();
           },
           autoFocus: true,
@@ -37,8 +36,8 @@
         })
       );
       wrapper.append(span(`state: ${JSON.stringify(state)}`));
-      wrapper.append(span("Google", { href: "" }));
-      const rows = Array(state.i)
+      wrapper.append(span("Link", { href: "" }));
+      const rows = Array(state.count)
         .fill()
         .map((_, i) => i);
       wrapper.append(
@@ -61,7 +60,7 @@
           ],
         })
       );
-      if (state.i % 2 === 0) {
+      if (state.count % 2 === 0) {
         wrapper.append(someComponent({ key: "someComponent" }));
       }
     });
