--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="jsgui.css" />
   <script>
     const root = makeComponent(function root() {
-      const state = this.useState({ username: "", count: 0 });
+      const state = this.useState({ username: "" });
+      const [count, setCount] = this.useLocalStorage("count", 0);
       const wrapper = this.append(
         div({
           style: { display: "flex", flexDirection: "column", alignItems: "flex-start" },
@@ -26,9 +27,9 @@
       wrapper.append(
         numberInput({
           label: "Count",
-          value: state.count,
+          value: count,
           onInput: (newCount) => {
-            state.count = newCount === "" ? null : +newCount;
+            setCount(newCount === "" ? null : +newCount);
             this.rerender();
           },
           min: 0,
@@ -37,7 +38,7 @@
       );
       wrapper.append(span(`state: ${JSON.stringify(state)}`));
       wrapper.append(span("Link", { href: "" }));
-      const rows = Array(state.count)
+      const rows = Array(+count)
         .fill()
         .map((_, i) => i);
       wrapper.append(
