--- a/404.html
+++ b/404.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<head>
-  <title>jsgui</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-  <link rel="stylesheet" href="jsgui.css" />
-  <script src="out/docs.js"></script>
-</head>
-<body></body>
+<html>
+  <head>
+    <title>jsgui</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="jsgui.css" />
+    <script src="out/docs.js"></script>
+    <!-- TODO: favicon? -->
+  </head>
+  <body>
+    <noscript>This page requires Javascript enabled.</noscript>
+  </body>
+</html>
