--- a/404.html
+++ b/404.html
@@ -3,9 +3,10 @@
   <head>
     <title>jsgui</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="jsgui.css" />
-    <link rel="stylesheet" href="docs.css" />
-    <script src="out/docs.js"></script>
+    <link rel="stylesheet" href="jsgui/jsgui.css" />
+    <link rel="stylesheet" href="docs/docs.css" />
+    <script src="jsgui/out/jsgui.js"></script>
+    <script src="docs/out/docs.js"></script>
     <!-- TODO: favicon? -->
   </head>
   <body>
