--- a/404.html
+++ b/404.html
@@ -4,9 +4,8 @@
     <title>jsgui</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="jsgui/jsgui.css" />
-    <link rel="stylesheet" href="docs/docs.css" />
-    <script src="jsgui/out/jsgui.js"></script>
-    <script src="docs/out/docs.js"></script>
+    <link rel="stylesheet" href="docs/docs.css" type="" />
+    <script type="module" src="docs/out/docs.mjs"></script>
     <!-- TODO: favicon? -->
   </head>
   <body>
