--- a/404.html
+++ b/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>jsgui</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="jsgui/jsgui.css" />
-    <link rel="stylesheet" href="docs/docs.css" type="" />
-    <script type="module" src="docs/out/docs.mjs"></script>
-    <!-- TODO: favicon? -->
-  </head>
-  <body>
-    <noscript>This page requires Javascript enabled.</noscript>
-  </body>
+    <head>
+        <title>jsgui</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="jsgui/jsgui.css" />
+        <link rel="stylesheet" href="docs/docs.css" />
+        <script type="module" src="docs/out/docs.mjs"></script>
+        <!-- TODO: favicon? -->
+    </head>
+    <body>
+        <noscript>This page requires Javascript enabled.</noscript>
+    </body>
 </html>
