--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
     <head>
         <title>jsgui</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="jsgui/jsgui.css" />
-        <link rel="stylesheet" href="docs/docs.css" />
-        <script type="module" src="docs/out/docs.mjs"></script>
+        <link rel="stylesheet" href="/jsgui/jsgui.css" type="text/css" />
+        <link rel="stylesheet" href="/docs/docs.css" type="text/css" />
+        <script type="module" src="/docs/out/docs.mjs"></script>
         <!-- TODO: favicon? -->
     </head>
     <body>
